# journal-alert

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: journals.yml
data/: paper_database.md  paper_database.xlsx
src/slack_paper_alert/: abstract_fetchers.py  cli.py  config.py  job.py  models.py  scheduler.py  search.py  slack.py  store.py
